# city

./: .gitignore  CMakeLists.txt  Makefile  config.yaml  todo.md
include/: shader.h  state.h
include/asset/: mesh.h
include/component/: agent.h  camera.h  circle.h  circle_renderer.h  clock.h  component.h  game.h  hand.h  mesh.h  rigid_body.h  shape.h  shape_renderer.h  window.h
include/maths/: angles.h  collision.h  geometry.h  grid.h  random.h
include/state/: camera.h  clock.h  game_state.h  input.h  input_state.h  viewport.h  window_state.h
include/system/: agent_handler.h  build_manager.h  camera_handler.h  circle_renderer.h  clock.h  clock_handler.h  game.h  mesh_renderer.h  physics.h  terrain_renderer.h  window.h  window_handler.h
include/world/: builder.h  city.h  world.h
shaders/: circle.fs  circle.vs  mesh.fs  mesh.vs  terrain.fs  terrain.vs
src/: main.cpp  shader.cpp
src/asset/: mesh.cpp  shader.cpp
src/component/: agent.cpp  camera.cpp  circle.cpp  circle_renderer.cpp  clock.cpp  game.cpp  mesh.cpp  rigid_body.cpp  shape.cpp  shape_renderer.cpp  window.cpp
src/maths/: angles.cpp  collision.cpp  geometry.cpp
src/system/: agent_handler.cpp  camera_handler.cpp  circle_renderer.cpp  clock_handler.cpp  game.cpp  mesh_renderer.cpp  physics.cpp  terrain_renderer.cpp  window.cpp  window_handler.cpp
src/world/: builder.cpp  builder_old.cpp
